chore(docs): Add more verbose documentation to the README.md